<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_btn"
        android:title="@string/home"
        android:iconTintMode="add"
        
        />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/categories_btn"
        android:title="@string/Category"
        app:cnb_iconColor="#009688"
        />

    <item
        android:id="@+id/nav_place"
        android:icon="@drawable/place_btn"
        android:title="@string/Place"
        app:cnb_iconColor="#1042D6"
        />

    <item
        android:id="@+id/nav_prpfile"
        android:icon="@drawable/person_btn"
        android:title="@string/Profile"
        app:cnb_iconColor="#F80A0A"
        />

</menu>