<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forts">

    <ScrollView android:clipToPadding="false"
        android:fillViewport="true"
        android:id="@+id/scrollViewScrollview"
        android:layout_gravity="start" android:layout_height="0dp"
        android:layout_weight="1" android:layout_width="match_parent"
        tools:ignore="MissingConstraints">
        <LinearLayout android:id="@+id/linearColumnadventure"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_21sp"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnAdventure"
                android:layout_gravity="start"
                android:layout_height="@dimen/_68pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_226pxh"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@string/lbl_adventure"
                android:textAllCaps="false"
                android:background="@drawable/rectangle_gradient_s_cyan_a400_e5_e_white_a700_00_radius_34"
                tools:text="@string/lbl_adventure"/>

            <LinearLayout
                android:id="@+id/linearRowadvenseven"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/frameStackadvenseven"
                    android:layout_width="@dimen/_177pxh"
                    android:layout_height="@dimen/_131pxv"
                    android:layout_marginTop="@dimen/_9pxv">

                    <ImageView
                        android:id="@+id/imageAdvenSeven"
                        android:layout_width="163dp"
                        android:layout_height="@dimen/_107pxv"
                        android:layout_gravity="top|start"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_adven7"
                        tools:ignore="ContentDescription" />

                    <View
                        android:id="@+id/viewRectangle496"
                        android:layout_width="128dp"
                        android:layout_height="@dimen/_52pxv"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_15" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/txtBunjeeJumping"
                        style="@style/txtMontserratromansemibold20"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="@dimen/_41pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_41pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:gravity="top|center"
                        android:text="@string/lbl_bunjee_jumping"
                        tools:text="@string/lbl_bunjee_jumping" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameStackadvenfour"
                    android:layout_width="@dimen/_174pxh"
                    android:layout_height="@dimen/_140pxv"
                    android:layout_marginStart="@dimen/_21pxh">

                    <ImageView
                        android:id="@+id/imageAdvenFour"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_124pxv"
                        android:layout_gravity="top|start"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_adven4"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/txtHotBalloon"
                        style="@style/txtMontserratromansemibold20"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="@dimen/_49pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_45pxh"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:text="@string/lbl_hot_balloon"
                        tools:text="@string/lbl_hot_balloon" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowadvenfive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:gravity="center"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStackadvenfive"
                    android:layout_height="@dimen/_140pxv"
                    android:layout_marginTop="@dimen/_3pxv" android:layout_width="@dimen/_182pxh">
                    <ImageView android:id="@+id/imageAdvenFive"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_115pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_adven5"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end"
                        android:gravity="center"
                        android:id="@+id/btnParagliding"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_19pxh"
                        android:paddingStart="@dimen/_25pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_paragliding"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_paragliding"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackadvensix"
                    android:layout_height="@dimen/_143pxv"
                    android:layout_marginStart="@dimen/_18pxh" android:layout_width="@dimen/_185pxh">
                    <ImageView android:id="@+id/imageAdvenSix"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_126pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_adven6"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end"
                        android:gravity="center"
                        android:id="@+id/btnRappelling"
                        android:layout_gravity="bottom|end"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_13pxh"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_8pxv"
                        android:singleLine="true"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded"
                        android:text="@string/lbl_rappelling"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowadventhree"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:gravity="center"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStackadventhree"
                    android:layout_height="@dimen/_151pxv"
                    android:layout_marginBottom="@dimen/_6pxv" android:layout_width="@dimen/_185pxh">
                    <ImageView android:id="@+id/imageAdvenThree"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_127pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_adven3"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtGroupOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingStart="@dimen/_23pxh"
                        android:paddingTop="@dimen/_22pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_riverrafting"
                        style="@style/txtSolidRounded" tools:text="@string/lbl_riverrafting"/>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/frameStackadvenfourOne"
                    android:layout_height="@dimen/_158pxv"
                    android:layout_marginStart="@dimen/_29pxh" android:layout_width="@dimen/_185pxh">
                    <ImageView android:id="@+id/imageAdvenFourOne"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_127pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_adven4_127x185"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_15"
                        android:ellipsize="end"
                        android:hint="@string/lbl_scubadiving"
                        android:id="@+id/etGroupTwo"
                        android:inputType="text"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_12pxh"
                        android:paddingStart="@dimen/_23pxh"
                        android:paddingTop="@dimen/_20pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRounded" tools:ignore="Autofill"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--    </FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>